[package]
name = "mt-recorder"
version = "0.5.2"
authors = ["Christopher Hall <hsw@ms2.hinet.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

simd = ["argonautica/simd"]


[dependencies]

clap = {version = "*", features = ["yaml"]}
simple-error = "*"
rlua = "*"

spmc = "*"
zmq = "*"

#rust-argon2 = "*"
#argonautica = { version = "*", features = ["simd"] }
argonautica = "*"

bytes = "*"

hex = "*"
hex-serde = "*"

base64 = "0.10.1"
base64-serde = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"
serde-aux = "*"

log = "*"
log4rs = "*"
