[package]
name = "mt-recorder"
version = "0.6.0"
authors = ["Christopher Hall <hsw@ms2.hinet.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[features]

#simd = ["argonautica/simd"]


[dependencies]

clap = {version = "2", features = ["yaml"]}
simple-error = "*"
rlua = "*"

spmc = "*"
#zmq = "*"
zmq = {version = "0.9.2", features = ["vendored"]}
#zmq = "0.10.0", features = ["vendored"]}

#rust-argon2 = "*"
argonautica = { version = "*", features = ["simd"] }
#argonautica = "*"

bytes = "*"

hex = "*"
hex-serde = "*"

base64 = "*"
base64-serde = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"
serde-aux = "*"

log = "*"
log4rs = "*"
