[package]
name = "mt-recorder"
version = "0.7.0"
authors = ["Christopher Hall <hsw@ms2.hinet.net>"]
description = "argon2 hasher for Bitmark blockchain"
readme = "README.md"
license = "BSD-2-Clause"
license-file = "LICENSE.txt"
repository = "https://github.com/hxw/mt-recorder.git"
keywords = ["block chain", "hashing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

clap = {version = "*", features = ["derive"]}
simple-error = "*"
rlua = "*"

spmc = "*"
#zmq = "*"
zmq = {version = "0.9.2", features = ["vendored"]}
#zmq = "0.10.0"

argonautica = { version = "*", features = ["simd"] }
#argonautica = "*"

bytes = "*"

hex = "*"
hex-serde = "*"

base64 = "*"
base64-serde = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"
serde-aux = "*"

log = "*"
log4rs = "*"
